--- a/package.json
+++ b/package.json
@@ -22,8 +22,14 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@sanity/observable": "^0.132.0",
+    "angularfire2": "^5.0.0-rc.10",
     "core-js": "^2.5.4",
-    "rxjs": "^6.0.0",
+    "firebase": "^5.0.4",
+    "rx-observable-update": "^1.0.0",
+    "rxjs": "^6.2.0",
+    "rxjs-compat": "^6.2.0",
+    "ts-md5": "^1.2.4",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
