--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "angularfire2": "^5.0.0-rc.10",
     "core-js": "^2.5.4",
     "firebase": "^5.0.4",
+    "hammerjs": "^2.0.8",
     "rx-observable-update": "^1.0.0",
     "rxjs": "^6.2.0",
     "rxjs-compat": "^6.2.0",
